Creating gradle starter script UNIX
* Creating gradle starter script UNIX
* Adding missed UI logo